--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="nav">
         <a class="logo" href="/"><span class="style">Web</span>Studio</a>
         <ul class="list">
-          <li><a class="link" href="#">Студия</a></li>
+          <li><a class="link" href="index.html">Студия</a></li>
           <li><a class="link" href="portfolio.html">Портфолио</a></li>
           <li><a class="link" href="">Контакты</a></li>
         </ul>
@@ -37,7 +37,7 @@
     <main>
       <section class="section">
         <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-        <button class="btn" type="button">Заказать услугу</button>
+        <button class="hero-btn" type="button">Заказать услугу</button>
       </section>
       <section class="section">
         <h2 class="title-hidden">Особенности</h2>
