--- a/portfolio.html
+++ b/portfolio.html
@@ -14,49 +14,51 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a class="logo" href="/"><span class="logo-style">Web</span>Studio</a>
-        <ul class="nav-list">
-          <li><a href="index.html">Студия</a></li>
-          <li><a href="portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a class="logo" href="/"><span class="style">Web</span>Studio</a>
+        <ul class="list">
+          <li><a class="link" href="index.html">Студия</a></li>
+          <li><a class="link" href="portfolio.html">Портфолио</a></li>
+          <li><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="address" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="address" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
       <section>
-        <h1>Фильтр</h1>
-        <ul>
+        <h1 class="title-hidden">Фильтр</h1>
+        <ul class="list">
           <li>
-            <button type="button">Все</button>
+            <button class="filter-btn" type="button">Все</button>
           </li>
           <li>
-            <button type="button">Веб-сайты</button>
+            <button class="filter-btn" type="button">Веб-сайты</button>
           </li>
           <li>
-            <button type="button">Приложения</button>
+            <button class="filter-btn" type="button">Приложения</button>
           </li>
           <li>
-            <button type="button">Дизайн</button>
+            <button class="filter-btn" type="button">Дизайн</button>
           </li>
           <li>
-            <button type="button">Маркетинг</button>
+            <button class="filter-btn" type="button">Маркетинг</button>
           </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/website.jpg" width="370" alt="website" />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="filter-title">Технокряк</h2>
+            <p class="filter-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -64,8 +66,10 @@
               width="370"
               alt="basketball-poster-design"
             />
-            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p>Дизайн</p>
+            <h2 class="filter-title">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h2>
+            <p class="filter-text">Дизайн</p>
           </li>
           <li>
             <img
@@ -73,8 +77,10 @@
               width="370"
               alt="restaurant-the-seafood"
             />
-            <h2>Ресторан <span lang="en">Seafood</span></h2>
-            <p>Приложение</p>
+            <h2 class="filter-title">
+              Ресторан <span lang="en">Seafood</span>
+            </h2>
+            <p class="filter-text">Приложение</p>
           </li>
           <li>
             <img
@@ -82,8 +88,8 @@
               width="370"
               alt="project-prime"
             />
-            <h2>Проект <span lang="en">Prime</span></h2>
-            <p>Маркетинг</p>
+            <h2 class="filter-title">Проект <span lang="en">Prime</span></h2>
+            <p class="filter-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -91,8 +97,8 @@
               width="370"
               alt="project-boxes"
             />
-            <h2>Проект <span lang="en">Boxes</span></h2>
-            <p>Приложение</p>
+            <h2 class="filter-title">Проект <span lang="en">Boxes</span></h2>
+            <p class="filter-text">Приложение</p>
           </li>
           <li>
             <img
@@ -100,8 +106,8 @@
               width="370"
               alt="website-inspiration-has-no-borders"
             />
-            <h2 lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="filter-title" lang="en">Inspiration has no Borders</h2>
+            <p class="filter-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -109,13 +115,15 @@
               width="370"
               alt="design-limited-edition"
             />
-            <h2>Издание <span lang="en">Limited Edition</span></h2>
-            <p>Дизайн</p>
+            <h2 class="filter-title">
+              Издание <span lang="en">Limited Edition</span>
+            </h2>
+            <p class="filter-text">Дизайн</p>
           </li>
           <li>
             <img src="./images/project-lab.jpg" width="370" alt="project-lab" />
-            <h2>Проект <span lang="en">LAB</span></h2>
-            <p>Маркетинг</p>
+            <h2 class="filter-title">Проект <span lang="en">LAB</span></h2>
+            <p class="filter-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -123,22 +131,26 @@
               width="370"
               alt="growing-business"
             />
-            <h2 lang="en">Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="filter-title" lang="en">Growing Business</h2>
+            <p class="filter-text">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="/"><span>Web</span>Studio</a>
+    <footer class="footer">
+      <a class="logo" href="/"><span class="style">Web</span>Studio</a>
       <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
+        <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="list">
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-address" href="mailto:info@example.com"
+              >info@example.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+            <a class="footer-address" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
