update html and css

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,15 @@
       <nav class="nav">
         <a class="logo" href="/"><span class="logo-style">Web</span>Studio</a>
         <ul class="list">
-          <li><a class="list-link" href="index.html">Студия</a></li>
-          <li><a class="list-link" href="portfolio.html">Портфолио</a></li>
-          <li><a class="list-link" href="">Контакты</a></li>
+          <li>
+            <a class="list-link" href="index.html">Студия</a>
+          </li>
+          <li>
+            <a class="list-link current" href="portfolio.html">Портфолио</a>
+          </li>
+          <li>
+            <a class="list-link" href="/">Контакты</a>
+          </li>
         </ul>
       </nav>
       <ul class="list">
@@ -138,7 +144,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="/"><span class="style">Web</span>Studio</a>
+      <a class="footer-logo" href="/"
+        ><span class="footer-style">Web</span>Studio</a
+      >
       <address>
         <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="list">
