--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
       <nav class="nav">
         <a class="logo" href="/"><span class="logo-style">Web</span>Studio</a>
         <ul class="list">
-          <li><a class="list-link" href="index.html">Студия</a></li>
-          <li><a class="list-link" href="portfolio.html">Портфолио</a></li>
-          <li><a class="list-link" href="">Контакты</a></li>
+          <li><a class="list-link current" href="index.html">Студия</a></li>
+          <li>
+            <a class="list-link" href="portfolio.html">Портфолио</a>
+          </li>
+          <li>
+            <a class="list-link" href="">Контакты</a>
+          </li>
         </ul>
       </nav>
       <ul class="list">
