update html and css

--- a/index.html
+++ b/index.html
@@ -93,22 +93,22 @@
       <section class="section-workers">
         <h2 class="section-title">Наша команда</h2>
         <ul class="list">
-          <li>
+          <li class="worker-card">
             <img src="./images/team-1.jpg" width="270" alt="team-1" />
             <h3 class="worker-title">Игорь Демьяненко</h3>
             <p class="worker-text" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="worker-card">
             <img src="./images/team-2.jpg" width="270" alt="team-2" />
             <h3 class="worker-title">Ольга Репина</h3>
             <p class="worker-text" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="worker-card">
             <img src="./images/team-3.jpg" width="270" alt="team-3" />
             <h3 class="worker-title">Николай Тарасов</h3>
             <p class="worker-text" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="worker-card">
             <img src="./images/team-4.jpg" width="270" alt="team-4" />
             <h3 class="worker-title">Михаил Ермаков</h3>
             <p class="worker-text" lang="en">UI Designer</p>
