--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
         <h1 class="title-hidden">Фильтр</h1>
         <ul class="list">
           <li>
-            <button class="filter-btn" type="button">Все</button>
+            <button class="filter-btn current" type="button">Все</button>
           </li>
           <li>
             <button class="filter-btn" type="button">Веб-сайты</button>
